src/test/resources/projects/acceptance/library-dependency/app/src/main/java/com/acme/Main.java
package com.acme;

import dep.MathLib;

public final class Main {
    private Main() {
    }

    public static void main(final String[] args) {
        System.out.println(MathLib.twice(21));
    }
}
